[package]
name = "hi-res-player"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = "0.17"
clap = { version = "4.0", features = ["derive"] }
ratatui = "0.23"
crossterm = "0.27"
console = "0.15"
libc = "0.2"  # ← перенесено сюда, убрал дублирование

# НОВЫЕ ДЕПЕНДЕНСИИ ДЛЯ SYMPHONIA
symphonia = "0.5"
symphonia-bundle-flac = "0.5"
symphonia-bundle-mp3 = "0.5"
symphonia-codec-vorbis = "0.5"  # ВМЕСТО symphonia-bundle-ogg
symphonia-format-wav = "0.5"
symphonia-core = "0.5"
symphonia-format-isomp4 = "0.5"  # для AAC/M4A
