[package]
name = "hi-res-player"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
symphonia = { version = "0.5", features = ["all"] }  # ← ОДНА строка symphonia
rubato = "0.14"
clap = { version = "4.0", features = ["derive"] }
ratatui = "0.23"
crossterm = "0.27"
console = "0.15"
libc = "0.2"
