[package]
name = "hi-res-player"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = "0.17"
clap = { version = "4.0", features = ["derive"] }
ratatui = "0.23"
crossterm = "0.27"
console = "0.15"
libc = "0.2"

# ПРАВИЛЬНЫЕ ДЕПЕНДЕНСИИ ДЛЯ SYMPHONIA
symphonia = { version = "0.5", features = ["aiff", "alac", "flac", "mp3", "vorbis", "wav", "isomp4"] }
